--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gutendex-books",
+  "homepage": "https://pratikh.github.io/gutendex-books",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
