--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gutendex-books",
   "version": "0.1.0",
+  "homepage": "https://pratikh.github.io/gutendex-books/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
