--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://pratikh.github.io/gutendex-books",
   "name": "gutendex-books",
   "version": "0.1.0",
   "private": true,
