--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pratikh.github.io/gutendex-books",
+  "homepage": "https://pratikh.github.io/gutendex-books/",
   "name": "gutendex-books",
   "version": "0.1.0",
   "private": true,
